# restaurant-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
model/: ncf.pth
src/: config.py  data.py  inference.py  model.py  model_components.py  preprocessing.py  test.py  testing.ipynb  train.py  utils.py
