[tool.poetry]
name = "restaurant-recommender"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.6.6"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
google-cloud-storage = "^2.16.0"
torch = "^2.2.2"
pyarrow = "^16.0.0"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
